--- a/project_extend/templates/index.html
+++ b/project_extend/templates/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
+<!--Carrega os arquivos estaticos-->
 {% load static %}
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Página de testes</title>
